# Visual-Inertial-Navigation

./: README.md
ROSSimpleTest/: ReadMe.txt
ROSSimpleTest/devel/: .catkin  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
ROSSimpleTest/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
ROSSimpleTest/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
ROSSimpleTest/devel/.private/roscpp/: .catkin  .rosinstall  setup.sh
ROSSimpleTest/devel/.private/roscpp/lib/pkgconfig/: roscpp.pc
ROSSimpleTest/devel/.private/simple/: .catkin  .rosinstall  setup.sh
ROSSimpleTest/devel/.private/std_msgs/: .catkin  .rosinstall  _setup_util.py  setup.sh
ROSSimpleTest/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  roscpp.pc  simple.pc  std_msgs.pc
ROSSimpleTest/devel/lib/simple/: listener  talker
ROSSimpleTest/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
ROSSimpleTest/devel/share/roscpp/cmake/: roscppConfig-version.cmake  roscppConfig.cmake
ROSSimpleTest/devel/share/simple/cmake/: simpleConfig-version.cmake  simpleConfig.cmake
ROSSimpleTest/devel/share/std_msgs/cmake/: std_msgsConfig-version.cmake  std_msgsConfig.cmake
ROSSimpleTest/logs/simple/: build.cmake.000.log.stderr
ROSSimpleTest/src/roscpp/: CMakeLists.txt
ROSSimpleTest/src/simple/: CMakeLists.txt
ROSSimpleTest/src/std_msgs/: CMakeLists.txt
datasetRead/: ReadMe.txt
maplab_ws/src/hello-world-plugin/src/: CMakeLists.txt  hello-world-plugin.cc  package.xml
(+8 files in other folders)
